Project project_management {
  database_type: "MySQL"
  Note: "Project structure, team, tasks, comments and activity."
}

Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [unique, not null]
  created_at timestamp
  updated_at timestamp
}

Table projects {
  id bigint [pk, increment]
  name varchar [not null]
  description text
  status varchar [not null, default: "planning"]
  workload varchar [not null, default: "medium"]
  start_date date [not null]
  end_date date [not null]
  actual_start_date date
  actual_end_date date
  progress int [not null, default: 0]
  tasks_total int [not null, default: 0]
  tasks_completed int [not null, default: 0]
  owner_id bigint
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table project_team {
  id bigint [pk, increment]
  project_id bigint [not null]
  user_id bigint [not null]
  permissions json [not null]
  allocation int [not null, default: 100]
  hourly_rate decimal(8,2)
  created_at timestamp
  updated_at timestamp

  Indexes {
    (project_id, user_id) [unique]
  }
}

Table tasks {
  id bigint [pk, increment]
  project_id bigint [not null]
  title varchar [not null]
  description text
  status varchar [not null, default: "todo"]
  priority varchar [not null, default: "medium"]
  assigned_to bigint
  estimated_hours int
  actual_hours int [not null, default: 0]
  due_date date
  start_date date
  completed_at timestamp
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table assigned_users {
  id bigint [pk, increment]
  task_id bigint [not null]
  user_id bigint [not null]
  created_at timestamp
  updated_at timestamp

  Indexes {
    (task_id, user_id) [unique]
  }
}

Table subtasks {
  id bigint [pk, increment]
  task_id bigint [not null]
  title varchar [not null]
  is_completed boolean [not null, default: false]
  sort_order int [not null, default: 0]
  created_at timestamp
  updated_at timestamp
}

Table comments {
  id bigint [pk, increment]
  task_id bigint [not null]
  user_id bigint [not null]
  body text [not null]
  created_at timestamp
  updated_at timestamp
}

Table activity_log {
  id bigint [pk, increment]
  project_id bigint [not null]
  user_id bigint [not null]
  type varchar [not null]
  description varchar [not null]
  subject_type varchar
  subject_id bigint
  metadata json
  created_at timestamp
  updated_at timestamp

  Note: "subject_type + subject_id is a polymorphic relation."
}

Ref: projects.owner_id > users.id

Ref: project_team.project_id > projects.id
Ref: project_team.user_id > users.id

Ref: tasks.project_id > projects.id
Ref: tasks.assigned_to > users.id

Ref: assigned_users.task_id > tasks.id
Ref: assigned_users.user_id > users.id

Ref: subtasks.task_id > tasks.id

Ref: comments.task_id > tasks.id
Ref: comments.user_id > users.id

Ref: activity_log.project_id > projects.id
Ref: activity_log.user_id > users.id
